refactor: Reservation에서 대기 상태를 별도의 도메인으로 분리 및 repository 계층의 adapter 패턴 제거